--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -142,6 +142,23 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingLeft="10px">
+
+                <TextView
+                    android:id="@+id/textWave"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:fontFamily="sans-serif-black"
+                    android:text="Wave: 1"
+                    android:textAlignment="center" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:orientation="vertical">
 
@@ -167,12 +184,6 @@
                         android:contentDescription="Cannon"
                         android:scaleType="fitCenter"
                         android:src="@drawable/cannon" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="150px"
-                    android:orientation="horizontal">
 
                     <ImageButton
                         android:id="@+id/buttonFlamethrower"
@@ -182,14 +193,6 @@
                         android:contentDescription="Flamethrower"
                         android:scaleType="fitCenter"
                         android:src="@drawable/flame" />
-
-                    <ImageButton
-                        android:id="@+id/imageButton5"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:src="@android:drawable/btn_star"
-                        android:visibility="invisible" />
                 </LinearLayout>
 
             </LinearLayout>
